docker-to-k8s/k8s/mariadb1-ss.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb-latest   # Example for db1
spec:
  serviceName: mariadb-latest-service 
  replicas: 1  # Single replica to start
  selector:
    matchLabels: 
      app: mariadb-latest
  template:
    metadata:
      labels:
        app: mariadb-latest
    spec:
      containers:
        - name: mariadb
          image: mariadb:latest 
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql 
  volumeClaimTemplates: 
    - metadata:
        name: mariadb-data 
      spec:
        accessModes: [ "ReadWriteOnce" ] 
        resources:
          requests:
            storage: 1Gi  # Adjust storage size as needed
