docker-to-k8s/k8s/adminer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer-svc
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30080
  selector:
    app: adminer
