docker-to-k8s/k8s/db1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-latest-svc
spec:
  ports:
    - port: 3306  
  selector:
    app: mariadb-latest
