docker-to-k8s/k8s/db2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db2-svc
spec:
  ports:
    - port: 3306  
  selector:
    app: mariadb-10
